[gd_scene load_steps=2 format=3 uid="uid://dd7fju2ngw7hu"]

[ext_resource type="Script" uid="uid://bninc77m2ui04" path="res://script/dropdown_button.gd" id="1_2u4vx"]

[node name="DropdownButton" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 120.0
offset_top = 276.0
offset_right = 120.0
offset_bottom = 276.0
script = ExtResource("1_2u4vx")

[node name="MainButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -277.0
offset_right = -20.0
offset_bottom = -246.0
grow_vertical = 0
text = "下拉選單"

[node name="OptionsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = -119.0
offset_top = -245.0
offset_right = -19.0
offset_bottom = -155.0
theme_override_constants/separation = 2

[connection signal="pressed" from="MainButton" to="." method="_on_main_button_pressed"]
